# BEM-AI

./: README.md  pyproject.toml
automa_ai/agent_test/: adk_agent_test.py  react_agent_test.py
automa_ai/agents/: agent_factory.py  orchestrator_agent.py  react_langgraph_agent.py
automa_ai/client/: __main__.py  push_notification_listener.py
automa_ai/common/: agent_executor.py  agent_registry.py  mcp_registry.py  response_parser.py  response_parser_test.py  workflow.py
automa_ai/network/: task_workflow.py
examples/eplus_chatbot/: eplus_chatbot.py
examples/sim_bem_network/: sim_bem_network_app.py
examples/sim_bem_network/agent_cards/: lighting_agent.json  planner_agent.json  template_agent.json
examples/sim_bem_network/app_mcps/: model_mcp.py
examples/sim_bem_network/app_mcps/models/: MediumOffice-90.1-2016-ASHRAE169-2013-2A.osm  MediumOffice-90.1-2016-ASHRAE169-2013-5A.osm
examples/sim_chat_demo/: streamlit_ui.py
src/agent_test/: react_agent_test.py
src/agents/: adk_agent.py  agent_factory.py  orchestrator_agent.py  react_langgraph_agent.py
src/client/: __main__.py  push_notification_listener.py
src/common/: agent_executor.py  agent_registry.py  chunk_test.py  mcp_registry.py  response_parser.py  response_parser_test.py  utils.py  workflow.py
src/examples/bem_typical_building/: bem_network.py  bem_network_factory_app.py
src/examples/bem_typical_building/agent_cards/: geometry_agent.json  orchestrator_agent.json  template_agent.json
src/examples/eplus_text_generator/: eplus_generator.py
src/examples/simple_bem_typical_building/: sim_bem_network_app.py
src/examples/simple_bem_typical_building/agent_cards/: envelope_agent.json  output_agent.json  simulation_agent.json
src/examples/simple_bem_typical_building/app_mcps/: os_mcp.py
src/examples/simple_bem_typical_building/app_mcps/models/: MediumOffice-90.1-2019-ASHRAE169-2013-2A.osm  MediumOffice-90.1-2019-ASHRAE169-2013-5A.osm
src/mcp_servers/: mcp_test.py  server.py
src/mcp_servers/eplus_doc/: eplus_doc_mcp_test.py
src/mcp_servers/eplus_schema/: eplus_server.py
src/network/: agentic_network.py  chat_network.py  task_workflow.py
