[project]
name = "automa_ai"
version = "0.1.1"
description = "PNNL Autoflow-AI: Dynamic multi-agent system for building applications"
requires-python = ">=3.12"
authors = [{name = "Weili Xu", email = "weili.xu@pnnl.gov"}, {name = "Hanlong, Wan", email = "hanlong.wan@pnnl.gov"}]
license = "BSD-2-Clause"
readme = "README.md"
dependencies = [
    "a2a-sdk==0.2.12",
    "asyncclick==8.1.8",
    "black==25.1.0",
    "bs4==0.0.2",
    "chromadb==1.0.15",
    "google-adk==1.6.1",
    "google-genai==1.25.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "jwcrypto==1.5.6",
    "langchain==0.3.26",
    "langchain-anthropic==0.3.18",
    "langchain-community==0.3.27",
    "langchain-mcp-adapters==0.1.9",
    "langchain-ollama==0.3.4",
    "langchain-openai==0.3.28",
    "langgraph==0.5.3",
    "litellm==1.74.3",
    "networkx==3.5",
    "openstudio==3.10.0",
    "pandas==2.3.1",
    "pydantic==2.11.7",
    "pyjwt==2.10.1",
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "uvicorn==0.35.0",
]
packages = [{include = "automa_ai", from = "."}]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
